--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
 					<div class="display-tc js-fullheight animate-box" data-animate-effect="fadeIn">
 						<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
 						<h1><span>tyson.wang</span></h1>
-						<h3><span>Web frontEnd Developer</span></h3>
+						<h3><span>JS全栈开发工程师</span></h3>
 						<p>
 							<ul class="fh5co-social-icons">
 								<li><a href="#"><i class="icon-twitter2"></i></a></li>
@@ -74,7 +74,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-				<h2>About Me</h2>
+				<h2>关于</h2>
 			</div>
 		</div>
 		<div class="row">
