--- a/index.html
+++ b/index.html
@@ -3,22 +3,11 @@
 <head>
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
-<title>Home</title>
+<title>个人主页</title>
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="" />
 <meta name="keywords" content="" />
 <meta name="author" content="" />
-<!-- Facebook and Twitter integration -->
-<meta property="og:title" content=""/>
-<meta property="og:image" content=""/>
-<meta property="og:url" content=""/>
-<meta property="og:site_name" content=""/>
-<meta property="og:description" content=""/>
-<meta name="twitter:title" content="" />
-<meta name="twitter:image" content="" />
-<meta name="twitter:url" content="" />
-<meta name="twitter:card" content="" />
-<!-- Animate.css -->
 <link rel="stylesheet" href="css/animate.css">
 <!-- Icomoon Icon Fonts-->
 <link rel="stylesheet" href="css/icomoon.css">
@@ -51,14 +40,6 @@
 						<div class="profile-thumb" style="background: url(images/user-3.jpg);"></div>
 						<h1><span>tyson.wang</span></h1>
 						<h3><span>JS全栈开发工程师</span></h3>
-						<p>
-							<ul class="fh5co-social-icons">
-								<li><a href="#"><i class="icon-twitter2"></i></a></li>
-								<li><a href="#"><i class="icon-facebook2"></i></a></li>
-								<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-								<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-							</ul>
-						</p>
 					</div>
 				</div>
 			</div>
@@ -84,17 +65,10 @@
 				</ul>
 			</div>
 			<div class="col-md-8">
-				<h2>Hello There!</h2>
-				<p>There live the blind texts far from the countries Vokalia and Consonantia, there live the blind texts. Separated they live in bookmarksgrove there live the blind texts far from the countries.</p>
-				<p>Far far away, behind the word mountains, Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci there live the blind texts from the countries Vokalia and Consonantia, there live the blind texts. Quos quia provident consequuntur culpa facere ratione maxime commodi voluptates id repellat velit eaque aspernatur expedita. Possimus itaque adipisci.</p>
-				<p>
-					<ul class="fh5co-social-icons">
-						<li><a href="#"><i class="icon-twitter2"></i></a></li>
-						<li><a href="#"><i class="icon-facebook3"></i></a></li>
-						<li><a href="#"><i class="icon-linkedin2"></i></a></li>
-						<li><a href="#"><i class="icon-dribbble2"></i></a></li>
-					</ul>
-				</p>
+				<h2>朋友们，你们好!</h2>
+				<p>我是来自于古城西安的一名JS全栈coder,欢迎你到西安来旅游。西安古称长安，是历史上第一座被称为京的都城，也是历史上第一座真正意义上的城市。周文王时就定都于此，筑设丰京，武王即位后再建镐京，合称丰镐，西安简称“镐”（hào）即源于此。汉高祖五年（前202年）置长安县，在渭河南岸、阿房宫北侧、秦兴乐宫的基础上兴建长乐宫，高祖七年（前200年）营建未央宫，同年国都由栎阳迁移至此，因地处长安乡，故名长安城，取意“长治久安”</p>
+				<p>除了编程外，业余时间也喜欢旅游，爬山、读书，偶有兴趣也会自己写一些东西。对于一切美好的自己不熟悉的东西我都抱有极大的好奇心。</p>
+			
 			</div>
 		</div>
 	</div>
@@ -104,14 +78,14 @@
 	<div class="container">
 		<div class="row animate-box">
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-				<h2>My Resume</h2>
+				<h2>走过的路</h2>
 			</div>
 		</div>
 		<div class="row">
 			<div class="col-md-12 col-md-offset-0">
 				<ul class="timeline">
 					<li class="timeline-heading text-center animate-box">
-						<div><h3>Work Experience</h3></div>
+						<div><h3>工作经历</h3></div>
 					</li>
 					<li class="animate-box timeline-unverted">
 						<div class="timeline-badge"><i class="icon-suitcase"></i></div>
@@ -152,56 +126,21 @@
 
 					<br>
 					<li class="timeline-heading text-center animate-box">
-						<div><h3>Education</h3></div>
+						<div><h3>教育</h3></div>
 					</li>
 					<li class="timeline-inverted animate-box">
 						<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
-								<h3 class="timeline-title">Masters Degree</h3>
-								<span class="company">University Name - 2007 - 2009</span>
+								<h3 class="timeline-title">大本</h3>
+								<span class="company">渭南师范学院 - 2004 - 2008</span>
 							</div>
 							<div class="timeline-body">
-								<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								<p>学校肇始于中国共产党陕西党团组织创始人之一、著名教育家王尚德1923年创立的赤水职业学校及之后“抗大式”的赤水农业职业学校，经历了原渭南师范学院、陕西师范大学渭南专修科、渭南师范专科学校三个时期。2000年，经教育部批准，渭南师范专科学校与1983年创立的渭南教育学院合并为本科层次的渭南师范学院。</p>
 							</div>
 						</div>
 					</li>
-					<li class="animate-box timeline-unverted">
-						<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h3 class="timeline-title">Bachelors Degree</h3>
-								<span class="company">University Name - 2002 - 2006</span>
-							</div>
-							<div class="timeline-body">
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							</div>
-						</div>
-					</li>
-					<li class="timeline-inverted animate-box">
-						<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h3 class="timeline-title">Diploma Course</h3>
-								<span class="company">College Name - 1999 - 2001</span>
-							</div>
-							<div class="timeline-body">
-								<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
-							</div>
-						</div>
-					</li>
-					<li class="animate-box timeline-unverted">
-						<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
-						<div class="timeline-panel">
-							<div class="timeline-heading">
-								<h3 class="timeline-title">Graduation</h3>
-								<span class="company">College Name - 1994 - 1998</span>
-							</div>
-							<div class="timeline-body">
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
-							</div>
-						</div>
-					</li>
+
 				</ul>
 			</div>
 		</div>
@@ -209,12 +148,12 @@
 </div>
 
 
-<div id="fh5co-features" class="animate-box">
+<!-- <div id="fh5co-features" class="animate-box">
 	<div class="container">
 		<div class="services-padding">
 			<div class="row">
 				<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-					<h2>My Services</h2>
+					<h2>爱</h2>
 				</div>
 			</div>
 			<div class="row">
@@ -224,8 +163,8 @@
 							<i class="icon-paintbrush"></i>
 						</span>
 						<div class="feature-copy">
-							<h3>Web Design</h3>
-							<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit.</p>
+							<h3>设计</h3>
+							<p>设计.</p>
 						</div>
 					</div>
 				</div>
@@ -297,7 +236,7 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 
 <div id="fh5co-skills" class="animate-box">
 	<div class="container">
@@ -311,26 +250,26 @@
 				<div class="chart" data-percent="95"><span><strong>HTML5</strong>95%</span></div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="93"><span><strong>CSS3</strong>93%</span></div>
+				<div class="chart" data-percent="93"><span><strong>Php</strong>93%</span></div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="90"><span><strong>jQuery</strong>90%</span></div>
+				<div class="chart" data-percent="90"><span><strong>vue</strong>90%</span></div>
 			</div>
 
 			<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="89"><span><strong>PHP</strong>89%</span></div>
+				<div class="chart" data-percent="89"><span><strong>Node</strong>90%</span></div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="85"><span><strong>MySQL</strong>85%</span></div>
+				<div class="chart" data-percent="85"><span><strong>egg.js</strong>70%</span></div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="90"><span><strong>AngularJS</strong>90%</span></div>
+				<div class="chart" data-percent="90"><span><strong>koa</strong>90%</span></div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="85"><span><strong>Ruby</strong>85%</span></div>
+				<div class="chart" data-percent="85"><span><strong>Photoshop</strong>85%</span></div>
 			</div>
 			<div class="col-md-3 col-sm-6 col-xs-12 text-center">
-				<div class="chart" data-percent="90"><span><strong>Java</strong>90%</span></div>
+				<div class="chart" data-percent="90"><span><strong>jQuery</strong>95%</span></div>
 			</div>
 		</div>
 		<div class="row">
@@ -344,7 +283,7 @@
 					</div>
 				</div>
 				<div class="progress-wrap">
-					<h3><span class="name-left">WordPress</span><span class="value-right">90%</span></h3>
+					<h3><span class="name-left">Php</span><span class="value-right">80%</span></h3>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-2 progress-bar-striped active" role="progressbar"
 					  aria-valuenow="90" aria-valuemin="0" aria-valuemax="100" style="width:90%">
@@ -352,7 +291,7 @@
 					</div>
 				</div>
 				<div class="progress-wrap">
-					<h3><span class="name-left">PHP</span><span class="value-right">80%</span></h3>
+					<h3><span class="name-left">vue</span><span class="value-right">90%</span></h3>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 					  aria-valuenow="80" aria-valuemin="0" aria-valuemax="100" style="width:80%">
@@ -360,7 +299,7 @@
 					</div>
 				</div>
 				<div class="progress-wrap">
-					<h3><span class="name-left">Java</span><span class="value-right">85%</span></h3>
+					<h3><span class="name-left">Node</span><span class="value-right">90%</span></h3>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-4 progress-bar-striped active" role="progressbar"
 					  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -370,7 +309,7 @@
 			</div>
 			<div class="col-md-6">
 				<div class="progress-wrap">
-					<h3><span class="name-left">Design</span><span class="value-right">100%</span></h3>
+					<h3><span class="name-left">egg.js</span><span class="value-right">70%</span></h3>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-5 progress-bar-striped active" role="progressbar"
 					  aria-valuenow="100" aria-valuemin="0" aria-valuemax="100" style="width:100%">
@@ -378,7 +317,7 @@
 					</div>
 				</div>
 				<div class="progress-wrap">
-					<h3><span class="name-left">Ruby</span><span class="value-right">70%</span></h3>
+					<h3><span class="name-left">koa</span><span class="value-right">90%</span></h3>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-striped active" role="progressbar"
 					  aria-valuenow="70" aria-valuemin="0" aria-valuemax="100" style="width:70%">
@@ -386,7 +325,7 @@
 					</div>
 				</div>
 				<div class="progress-wrap">
-					<h3><span class="name-left">Python</span><span class="value-right">85%</span></h3>
+					<h3><span class="name-left">Photoshop</span><span class="value-right">85%</span></h3>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-1 progress-bar-striped active" role="progressbar"
 					  aria-valuenow="85" aria-valuemin="0" aria-valuemax="100" style="width:85%">
@@ -394,7 +333,7 @@
 					</div>
 				</div>
 				<div class="progress-wrap">
-					<h3><span class="name-left">jQuery</span><span class="value-right">75%</span></h3>
+					<h3><span class="name-left">jQuery</span><span class="value-right">95%</span></h3>
 					<div class="progress">
 					  <div class="progress-bar progress-bar-3 progress-bar-striped active" role="progressbar"
 					  aria-valuenow="75" aria-valuemin="0" aria-valuemax="100" style="width:75%">
@@ -406,11 +345,11 @@
 	</div>
 </div>
 
-<div id="fh5co-work" class="fh5co-bg-dark">
+<!-- <div id="fh5co-work" class="fh5co-bg-dark">
 	<div class="container">
 		<div class="row animate-box">
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-				<h2>Work</h2>
+				<h2>WORKD</h2>
 			</div>
 		</div>
 		<div class="row">
@@ -480,9 +419,9 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 
-<div id="fh5co-blog">
+<!-- <div id="fh5co-blog">
 	<div class="container">
 		<div class="row animate-box">
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -538,16 +477,16 @@
 			</div>
 		</div>
 	</div>
-</div>
+</div> -->
 
 <div id="fh5co-started" class="fh5co-bg-dark">
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row animate-box">
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-				<h2>Hire Me!</h2>
-				<p>Facilis ipsum reprehenderit nemo molestias. Aut cum mollitia reprehenderit. Eos cumque dicta adipisci architecto culpa amet.</p>
-				<p><a href="#" class="btn btn-default btn-lg">Contact Us</a></p>
+				<h2>请收下我膝盖!</h2>
+				<p>天时不如地利---地利不如人和</p>
+				<p><a href="#" class="btn btn-default btn-lg">Contact ME</a></p>
 			</div>
 		</div>
 	</div>
@@ -558,57 +497,44 @@
 		<div class="overlay"></div>
 	</div>
 	<div class="choose animate-box">
-		<h2>Contact</h2>
+		<h2>联系我吧</h2>
 		<form action="#">
 			<div class="row form-group">
 				<div class="col-md-6">
-					<input type="text" id="fname" class="form-control" placeholder="Your firstname">
+					<input type="text" id="fname" class="form-control" placeholder="您的姓名">
 				</div>
 			</div>
+			
+
 			<div class="row form-group">
-				<div class="col-md-6">
-					<input type="text" id="lname" class="form-control" placeholder="Your lastname">
+				<div class="col-md-12">
+					<input type="text" id="email" class="form-control" placeholder="您的邮箱">
 				</div>
 			</div>
 
 			<div class="row form-group">
 				<div class="col-md-12">
-					<input type="text" id="email" class="form-control" placeholder="Your email address">
+					<input type="text" id="wx" class="form-control" placeholder="您的微信号">
 				</div>
 			</div>
 
 			<div class="row form-group">
 				<div class="col-md-12">
-					<input type="text" id="subject" class="form-control" placeholder="Your subject of this message">
-				</div>
-			</div>
-
-			<div class="row form-group">
-				<div class="col-md-12">
-					<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="Say something about us"></textarea>
+					<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="介绍点吧"></textarea>
 				</div>
 			</div>
 			<div class="form-group">
-				<input type="submit" value="Send Message" class="btn btn-primary">
+				<input type="走起" value="Send Message" class="btn btn-primary">
 			</div>
 
 		</form>	
 	</div>
 </div>
 
-<div id="map" class="fh5co-map"></div>
+<div id="map" class="fh5co-map">
+	<a href='http://www.baidu.com'>我的博客</a>
 </div>
-
-<div id="fh5co-footer">
-	<div class="container">
-		<div class="row">
-			<div class="col-md-12">
-				<p>Copyright &copy; 2017.Company name All rights reserved.<a target="_blank" href="http://sc.chinaz.com/moban/">&#x7F51;&#x9875;&#x6A21;&#x677F;</a></p>
-			</div>
-		</div>
-	</div>
 </div>
-
 <div class="gototop js-top">
 	<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 </div>
@@ -625,11 +551,7 @@
 <script src="js/jquery.stellar.min.js"></script>
 <!-- Easy PieChart -->
 <script src="js/jquery.easypiechart.min.js"></script>
-<!-- Google Map -->
-<!---<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCefOgb1ZWqYtj7raVSmN4PL2WkTrc-KyA&sensor=false"></script>--->
-<script src="js/google_map.js"></script>
 
-<!-- Main -->
 <script src="js/main.js"></script>
 
 </body>
