--- a/index.html
+++ b/index.html
@@ -57,11 +57,11 @@
 		<div class="row">
 			<div class="col-md-4">
 				<ul class="info">
-					<li><span class="first-block">Full Name:</span><span class="second-block">tyson.wang</span></li>
-					<li><span class="first-block">Phone:</span><span class="second-block">this is a secert</span></li>
-					<li><span class="first-block">Email:</span><span class="second-block">379366230@qq.com</span></li>
-					<li><span class="first-block">Website:</span><span class="second-block">https://tysonwang.github.io</span></li>
-					<li><span class="first-block">Address:</span><span class="second-block">Guanghua Road District, Xi'an, Shaanxi Province, China</span></li>
+					<li><span class="first-block">装逼的名字:</span><span class="second-block">tyson.wang</span></li>
+					<li><span class="first-block">电话:</span><span class="second-block">就不告诉你</span></li>
+					<li><span class="first-block">邮箱:</span><span class="second-block">379366230@qq.com</span></li>
+					<li><span class="first-block">博客:</span><span class="second-block">https://tyson.mynatapp.cc</span></li>
+					<li><span class="first-block">地址:</span><span class="second-block">暮然回首,那人却在灯火阑珊处</span></li>
 				</ul>
 			</div>
 			<div class="col-md-8">
@@ -85,17 +85,17 @@
 			<div class="col-md-12 col-md-offset-0">
 				<ul class="timeline">
 					<li class="timeline-heading text-center animate-box">
-						<div><h3>工作经历</h3></div>
+						<div><h3>经历</h3></div>
 					</li>
 					<li class="animate-box timeline-unverted">
 						<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
-								<h3 class="timeline-title">Senior Developer</h3>
-								<span class="company">Company Name - 2016 - Current</span>
+								<h3 class="timeline-title">研发</h3>
+								<span class="company">2010....</span>
 							</div>
 							<div class="timeline-body">
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<p>那是8月份，老同学的一句话，来吧，跟我一起入坑做个码畜，由此便开启了卖命的生活...</p>
 							</div>
 						</div>
 					</li>
@@ -103,11 +103,11 @@
 						<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
-								<h3 class="timeline-title">Junior Developer</h3>
-								<span class="company">Company Name - 2013 - 2017</span>
+								<h3 class="timeline-title">国企之路</h3>
+								<span class="company">2008 - 2010</span>
 							</div>
 							<div class="timeline-body">
-								<p>Far far away, behind the word mountains, they live in Bookmarksgrove right at the coast of the Semantics, a large language ocean.</p>
+								<p>这是一个好地方，让人终生难忘.</p>
 							</div>
 						</div>
 					</li>
@@ -115,15 +115,14 @@
 						<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
-								<h3 class="timeline-title">UI/UX Designer</h3>
-								<span class="company">Company Name - 2010 - 2012</span>
+								<h3 class="timeline-title">地税局的生活</h3>
+								<span class="company">2007-2008</span>
 							</div>
 							<div class="timeline-body">
-								<p>Far far away, behind the word mountains, far from the countries Vokalia and Consonantia, there live the blind texts.</p>
+								<p>原本考虑打算考公务员的，做了个临时工混混日子，别人的生活确实美，但问题与我无关。</p>
 							</div>
 						</div>
 					</li>
-
 					<br>
 					<li class="timeline-heading text-center animate-box">
 						<div><h3>教育</h3></div>
@@ -242,7 +241,7 @@
 	<div class="container">
 		<div class="row">
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-				<h2>Skills</h2>
+				<h2>我有几根要饭的棍</h2>
 			</div>
 		</div>
 		<div class="row row-pb-md">
@@ -497,21 +496,18 @@
 		<div class="overlay"></div>
 	</div>
 	<div class="choose animate-box">
-		<h2>联系我吧</h2>
+		<h2>联系我吧！ <a href=''>个人博客</a></h2>
 		<form action="#">
 			<div class="row form-group">
 				<div class="col-md-6">
 					<input type="text" id="fname" class="form-control" placeholder="您的姓名">
 				</div>
 			</div>
-			
-
 			<div class="row form-group">
 				<div class="col-md-12">
 					<input type="text" id="email" class="form-control" placeholder="您的邮箱">
 				</div>
 			</div>
-
 			<div class="row form-group">
 				<div class="col-md-12">
 					<input type="text" id="wx" class="form-control" placeholder="您的微信号">
@@ -524,21 +520,16 @@
 				</div>
 			</div>
 			<div class="form-group">
-				<input type="走起" value="Send Message" class="btn btn-primary">
+				<input type="submit" value="走起" class="btn btn-primary">
 			</div>
 
 		</form>	
 	</div>
 </div>
-
-<div id="map" class="fh5co-map">
-	<a href='http://www.baidu.com'>我的博客</a>
-</div>
 </div>
 <div class="gototop js-top">
 	<a href="#" class="js-gotop"><i class="icon-arrow-up22"></i></a>
 </div>
-
 <!-- jQuery -->
 <script src="js/jquery.min.js"></script>
 <!-- jQuery Easing -->
