--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
 	</div>
 </div>
 
-<div id="fh5co-resume" class="fh5co-bg-color">
+<div id="fh5co-resume" class="fh5co-bg-color" style='background: #ff8f00;'>
 	<div class="container">
 		<div class="row animate-box">
 			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
@@ -85,16 +85,16 @@
 			<div class="col-md-12 col-md-offset-0">
 				<ul class="timeline">
 					<li class="timeline-heading text-center animate-box">
-						<div><h3>经历</h3></div>
+						<div><h3 style='background:#fff;color:#ff8f00'>经历</h3></div>
 					</li>
 					<li class="animate-box timeline-unverted">
 						<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
-								<h3 class="timeline-title">研发</h3>
-								<span class="company">2010....</span>
+								<h3 class="timeline-title" style='color: #fff;'>研发</h3>
+								<span class="company" style='color: #fff;'>2010....</span>
 							</div>
-							<div class="timeline-body">
+							<div class="timeline-body" style='color: #fff;'>
 								<p>那是8月份，老同学的一句话，来吧，跟我一起入坑做个码畜，由此便开启了卖命的生活...</p>
 							</div>
 						</div>
@@ -103,10 +103,10 @@
 						<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
-								<h3 class="timeline-title">国企之路</h3>
-								<span class="company">2008 - 2010</span>
+								<h3 class="timeline-title" style='color: #fff;'>国企之路</h3>
+								<span class="company" style='color: #fff;'>2008 - 2010</span>
 							</div>
-							<div class="timeline-body">
+							<div class="timeline-body" style='color: #fff;'>
 								<p>这是一个好地方，让人终生难忘.</p>
 							</div>
 						</div>
@@ -115,26 +115,26 @@
 						<div class="timeline-badge"><i class="icon-suitcase"></i></div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
-								<h3 class="timeline-title">地税局的生活</h3>
-								<span class="company">2007-2008</span>
+								<h3 class="timeline-title" style='color: #fff;'>地税局的生活</h3>
+								<span class="company" style='color: #fff;'>2007-2008</span>
 							</div>
-							<div class="timeline-body">
+							<div class="timeline-body" style='color: #fff;'>
 								<p>原本考虑打算考公务员的，做了个临时工混混日子，别人的生活确实美，但问题与我无关。</p>
 							</div>
 						</div>
 					</li>
 					<br>
 					<li class="timeline-heading text-center animate-box">
-						<div><h3>教育</h3></div>
+						<div><h3 style='background:#fff;color:#ff8f00' >教育</h3></div>
 					</li>
 					<li class="timeline-inverted animate-box">
 						<div class="timeline-badge"><i class="icon-graduation-cap"></i></div>
 						<div class="timeline-panel">
 							<div class="timeline-heading">
-								<h3 class="timeline-title">大本</h3>
-								<span class="company">渭南师范学院 - 2004 - 2008</span>
+								<h3 class="timeline-title" style='color: #fff;'>大本</h3>
+								<span class="company" style='color: #fff;'>渭南师范学院 - 2004 - 2008</span>
 							</div>
-							<div class="timeline-body">
+							<div class="timeline-body" style='color: #fff;'>
 								<p>学校肇始于中国共产党陕西党团组织创始人之一、著名教育家王尚德1923年创立的赤水职业学校及之后“抗大式”的赤水农业职业学校，经历了原渭南师范学院、陕西师范大学渭南专修科、渭南师范专科学校三个时期。2000年，经教育部批准，渭南师范专科学校与1983年创立的渭南教育学院合并为本科层次的渭南师范学院。</p>
 							</div>
 						</div>
@@ -482,48 +482,42 @@
 	<div class="overlay"></div>
 	<div class="container">
 		<div class="row animate-box">
-			<div class="col-md-8 col-md-offset-2 text-center fh5co-heading">
-				<h2>请收下我膝盖!</h2>
-				<p>天时不如地利---地利不如人和</p>
+			<div class="col-md-6  text-center fh5co-heading">
+				<h2 style='font-size:28px; line-height: 1.3'>请收下我膝盖!</h2>
+				<p><img src='./images/unnamed.jpg' style='height:124px;width:124px;border-radius: 20px;outline: #fff dotted thick;
+					outline-offset: 3px;'/></p>
+				<p style="margin-bottom:8px;">天时不如地利---地利不如人和</p>
 				<p><a href="#" class="btn btn-default btn-lg">Contact ME</a></p>
 			</div>
+			<div class="col-md-6">
+				<div class="choose animate-box" style="text-align:center;">
+					<h2 style='color:#fff'>联系我</h2>
+					<form action="#">
+						<div class="row form-group">
+							<div class="col-md-6 col-md-offset-3">
+								<input type="text" id="fname" style='border: 2px solid #fff;background: #fff' class="form-control" placeholder="您的姓名">
+							</div>
+						</div>
+						<div class="row form-group">
+							<div class="col-md-6 col-md-offset-3">
+								<input type="text" id="email" style='border: 2px solid #fff;   background: #fff;' class="form-control" placeholder="您的邮箱">
+							</div>
+						</div>
+						<div class="row form-group">
+							<div class="col-md-6 col-md-offset-3">
+								<input type="text" id="wx" style='border: 2px solid #fff;  background: #fff;' class="form-control" placeholder="您的微信号">
+							</div>
+						</div>
+			
+					
+						<div class="form-group">
+							<input type="submit" value="GO-ON" class="btn btn-primary">
+						</div>
+			
+					</form>	
+				</div>
+			</div>
 		</div>
-	</div>
-</div>
-
-<div id="fh5co-consult">
-	<div class="video fh5co-video" style="background-image: url(images/cover_bg_1.jpg);">
-		<div class="overlay"></div>
-	</div>
-	<div class="choose animate-box">
-		<h2>联系我吧！ <a href=''>个人博客</a></h2>
-		<form action="#">
-			<div class="row form-group">
-				<div class="col-md-6">
-					<input type="text" id="fname" class="form-control" placeholder="您的姓名">
-				</div>
-			</div>
-			<div class="row form-group">
-				<div class="col-md-12">
-					<input type="text" id="email" class="form-control" placeholder="您的邮箱">
-				</div>
-			</div>
-			<div class="row form-group">
-				<div class="col-md-12">
-					<input type="text" id="wx" class="form-control" placeholder="您的微信号">
-				</div>
-			</div>
-
-			<div class="row form-group">
-				<div class="col-md-12">
-					<textarea name="message" id="message" cols="30" rows="10" class="form-control" placeholder="介绍点吧"></textarea>
-				</div>
-			</div>
-			<div class="form-group">
-				<input type="submit" value="走起" class="btn btn-primary">
-			</div>
-
-		</form>	
 	</div>
 </div>
 </div>
